operations/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: registrycredentials
      containers:
        - name: api
          image: barywhyte/api:v2
          ports:
            - containerPort: 8000
