operations/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #acme.cert-manager.io/http01-ingress-class: nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - barywhyt.duckdns.org
      secretName: barywhyt-tls
  rules:
    - host: barywhyt.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
